2008-01-14  Michael Goffioul <michael.goffioul@gmail.com>

	* genprops.awk (emit_get_callback): Pass user data to execute method.
	* graphics.cc (execute_callback): New static function.
	(callback_property::validate): Make it work.
	(callback_property::execute): Make it work.
	(gh_manager::do_free): Execute delete function here.
	* graphics.h.in (callback_property::execute): Fix decl.
	(base_properties::buttondownfcn, base_properties::createfcn,
	base_properties::deletefcn, base_properties::userdata): Default
	value is empty Matrix, not undefined octave_value object.
	(base_properties::execute_createfcn): New function.
	(base_properties::execute_deletefcn): New function.

2007-12-13  Shai Ayal  <shaiay@users.sourceforge.net>

	* graphics.h.in, graphics.cc (class base_properties): New
	properties: busyaction, buttondownfcn, clipping, createfcn,
	deletefcn, handlevisibility, hittest, interruptible, selected,
	selectionhighlight, uicontextmenu, userdata, visible.
	(class figure): Delete visible property.

2008-01-13  Michael Goffioul <michael.goffioul@gmail.com>

	* grahpics.h.in: Sprinkle with OCTINTERP_API as needed.
	(axes::properties::xaxislocation): Allow value of zero.
	(axes::properties::yaxislocation): Likewise.

2008-01-12  Michael Goffioul <michael.goffioul@gmail.com>

	* Makefile.in (distclean): Delete graphics-props.cc.

	* genprops.awk: Handle new graphics property classes.

	* graphics.h.in, graphics.cc: Adapt for new specific property types.

2008-01-12  John W. Eaton  <jwe@octave.org>

	* toplev.cc (octave_config_info): Add GNUPLOT to the struct.
	* oct-conf.h.in (OCTAVE_CONF_GNUPLOT): New macro.

2008-01-11  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/__qp__.cc (qp): Undo part of change from
	2007-09-04 (compute Y at each iteration).

2008-01-10  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/fsolve.cc (Ffsolve): Doc fix.
	(hybrd_info_to_fsolve_info): Swap return values for -1 and -2 inputs.

	* DLD_FUNCTIONS/__gnuplot_raw__.l: Delete.