@@ -1,3 +1,12 @@
+2008-01-14  Kai Habel  <kai.habel@gmx.de>
+
+	* graphics.h.in (class patch::properties): New properties,
+	cdatamapping, facevertexalphadata, facevertexcdata, vertexnormals,
+	normalmode, facelighting, edgealpha, edgelighting,
+	backfacelighting, ambientstrength, diffusestrength,
+	specularstrength, specularexponent, specularcolorreflectance,
+	erasemode.
+
 2008-01-14  Michael Goffioul <michael.goffioul@gmail.com>
 
 	* genprops.awk (emit_get_callback): Pass user data to execute method.
